[gd_scene load_steps=7 format=2]

[ext_resource path="res://Assets/Interactables/Assets/Tramp.svg" type="Texture" id=1]
[ext_resource path="res://Assets/Interactables/Trampolines.gd" type="Script" id=2]
[ext_resource path="res://Assets/Interactables/Assets/TrampTouch1.svg" type="Texture" id=3]
[ext_resource path="res://Assets/Interactables/Assets/TrampTouch2.svg" type="Texture" id=4]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 1 ) ],
"loop": true,
"name": "default",
"speed": 5.0
}, {
"frames": [ ExtResource( 3 ), ExtResource( 4 ) ],
"loop": false,
"name": "touch",
"speed": 12.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 54.9845, 10.8777 )

[node name="Trampoline" type="Area2D"]
scale = Vector2( 2.63711, 2.63711 )
script = ExtResource( 2 )

[node name="TrampAnim" type="AnimatedSprite" parent="."]
position = Vector2( 4.76837e-07, -33 )
scale = Vector2( 0.481407, 0.481407 )
frames = SubResource( 1 )
animation = "touch"
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 5.68434e-14, -0.87765 )
scale = Vector2( 1, 1 )
shape = SubResource( 2 )

[connection signal="body_entered" from="." to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_Trampoline_body_exited"]
